# Haskell-Music-Player

./: .gitignore  HaskellMusicPlayer.cabal  HaskellMusicPlayer.glade  README
src/: CurrentSong.hs  CurrentSong.hs-boot  GuiData.hs  HMP.hs  Main.hs  Playlist.hs  Playlist.hs-boot  Progressbar.hs  Progressbar.hs-boot  StatusUpdate.hs  Util.hs
